--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
+  "engines": {
+    "node": "12.18.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
